[package]
name = "glcp"
version = "0.1.0"
edition = "2021"
authors = ["Shane Stephenson <stephenson.shane.a@gmail.com>"]
readme = "README.md"
description = "Small library to help you set and get text from a global clipboard."
homepage = "https://github.com/UnsafeOats/glip"
repository = "https://github.com/UnsafeOats/glip"
license = "MIT"
keywords = ["clipboard", "copy", "paste", "text", "global"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
